# ipython-playground

./: .copier-answers.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml  build_and_publish_text_matrix.yml
ipython_playground/: __init__.py  create.py  database.py  extras.py  logger.py  redis.py  utils.py  version.py
tests/: test_enum_detection.py  test_extras.py  test_find_all_sqlmodels.py  test_funcy_import.py  test_import.py  test_log_level.py  test_module_paths.py  test_signature_formatting.py  test_utils.py
