[project]
name = "ipython-playground"
version = "0.4.1"
description = "Understand what is in your ipython playground."
keywords = ["repl", "ipython", "playground"]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["rich>=13.9.4"]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/ipython-playground" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
ipython-playground = "ipython_playground:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pyright[nodejs]>=1.1.408",
    "ruff>=0.15.0",
    "coverage>=7.13.4",
    "pytest-cov>=7.0.0",
    "covdefaults>=2.3.0",
]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing --cov-report=html:tmp/htmlcov"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["ipython_playground"]

[tool.coverage.report]
fail_under = 15

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]
